// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<div
  className="css-i3qk50"
>
  <div
    className="css-1sol7qu"
  >
    <Brand />
    <Navigation
      height={100}
    />
  </div>
</div>
`;

exports[`should render children 1`] = `
<div
  className="css-i3qk50"
>
  <div
    className="css-1sol7qu"
  >
    <Brand />
    <Navigation
      height={100}
    />
  </div>
  <Child />
</div>
`;
